--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,9 @@ dependencies:
   google_fonts: ^6.3.1
   flutter_svg: ^2.2.2
   animated_splash_screen: ^1.3.0
-
+  http: ^1.6.0
+  shared_preferences: ^2.5.3
+  get: ^4.7.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
